--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
         --color-primary-300: rgba(148, 240, 139, 1);
         --color-primary-400: rgba(107, 226, 107, 1);
         --color-secondary: #FFBD3A;
+        --color-secondary-hover: #E6AA34;
         --color-tertiary: #F64920;
         --color-black-primary: #222325;
         --color-black-secondary: rgba(51, 51, 51, 0.68);
@@ -44,11 +45,15 @@
             display: none; /* Chrome, Safari, Opera */
         }
         
-/* @layer base {
-    body {
-        font-display: "Lato", sans-serif;
-         
+@layer utilities {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .hide-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+     /* Hide scrollbar for IE, Edge and Firefox */
+      .hide-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
     }
-} */
-
+  }
         
