feat: enhance authentication forms with new input components and update styles

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
         --color-primary-200: rgba(192, 250, 180, 1);
         --color-primary-300: rgba(148, 240, 139, 1);
         --color-primary-400: rgba(107, 226, 107, 1);
+        --color-primary-500: rgba(226, 252, 217, 1);
         --color-secondary: #FFBD3A;
         --color-secondary-hover: #E6AA34;
         --color-tertiary: #F64920;
